--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,6 +7,7 @@
   when: ansible_service_mgr == 'systemd'
 
 - name: restart docker-slack-notifier
+  become: yes
   service:
     name: docker-slack-notifier
     state: restarted
